# OpenInferencev2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  FINAL_IMPROVEMENTS_SUMMARY.md  PROJECT_SUMMARY.md  README.md  TECHNICAL_HIGHLIGHTS.md  benchmark_results_20250625_183740.json  benchmark_results_20250625_184049.json  benchmark_results_20250625_191331.json  benchmark_results_20250625_195740.json  demo.py  demo_simple.py  final_demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_complex.py  test_basic.py  test_real_benchmarks.py  tox.ini
.github/workflows/: ci.yml
benchmarks/: __init__.py  performance_metrics.py  real_benchmarks.py
docs/: API_REFERENCE.md  README.md
k8s/: deployment.yaml
openinferencev2/: __init__.py  config.py  monitor.py  openinferencev2.py  optimization.py  scheduler.py
src/cli/: __init__.py  main.py
src/core/: custom_kernels.cu  custom_kernels.h  distributed_manager.cpp  distributed_manager.h  inference_engine.cpp  inference_engine.h  python_bindings.cpp
src/python/: monitor.py  scheduler.py  turboinfer.py
tests/: test_inference.py
